--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,4 +1,5 @@
 .button {
+  display: inline-block;
   background-color: var(--secondary-color);
   color: var(--dark-color);
   padding: 19px 24px;
@@ -7,4 +8,10 @@
   font-weight: 500;
   border: 0;
   border-radius: 16px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.button:hover{
+  background-color: var(--color-orange);
 }
