--- a/src/components/Header/Nav.css
+++ b/src/components/Header/Nav.css
@@ -26,3 +26,46 @@
 .nav-button:hover {
   border-bottom: 1px solid var(--secondary-color);
 }
+
+.hamburger {
+  display: none;
+  font-size: 24px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  top: 10px;
+  right: 10px;
+  z-index: 1000;
+}
+
+@media only screen and (max-width: 600px) {
+  .nav {
+    display: none;
+  }
+
+  .nav-button {
+    padding: 0.5em 1em;
+  }
+
+  .hamburger {
+    display: block;
+  }
+
+  .nav-button {
+    padding: 0.5em 1em;
+    font-size: 18px;
+  }
+
+  .nav--open {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    background: white;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+  }
+}
