--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,3 +14,14 @@
   padding-right: 1em;
   max-width: 180px;
 }
+
+@media only screen and (max-width: 600px) {
+  .header-logo {
+    max-width: 120px;
+  }
+
+  .header {
+    align-items: center;
+    padding: 20px 10px;
+  }
+}
