--- a/src/components/Home/Hero.css
+++ b/src/components/Home/Hero.css
@@ -42,3 +42,33 @@
   border-radius: 12px; 
   position: absolute;
 }
+
+@media only screen and (max-width: 600px) {
+  .hero {
+    max-width: 100%;
+    padding-top: 12px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+  }
+
+  .hero-text {
+    font-size: 16px;
+  }
+
+  .hero-button {
+    padding: 10px;
+  }
+
+  .hero-image-wrapper {
+    width: 100%;
+    height: auto;
+  }
+
+  .hero-image {
+    margin-top: 20px;
+    width: 100%;
+    height: auto;
+    padding-right: 10px;
+    position: unset;
+  }
+}
