--- a/src/index.css
+++ b/src/index.css
@@ -98,3 +98,17 @@ code {
   background-color: var(--color-white);
   color: var(--dark-color);
 }
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 32px;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+
+  h3 {
+    font-size: 20px;
+  }
+}
